finish: add psr, twig

--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,19 @@
 {
     "name": "nikita-nedelchik/innowise",
     "description": "my app",
-    "autoload": {
-        "psr-4": {
-            "app\\": "/usr/share/nginx/html/"
-        }
-    },
     "authors": [
         {
             "name": "nikita",
             "email": "nikita.nedelchik@innowise-group.com"
         }
     ],
-    "require": {}
+    "require": {
+        "twig/twig": "3.3.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "app\\": "/usr/share/nginx/html/",
+            "Twig\\": "/usr/share/nginx/html/"
+        }
+    }
 }
